# synthetic-biomedical-data-course

./: .gitignore  LICENSE  Makefile  OER-LICENSE.txt  README.md  nb_setup.py  postBuild  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: export-requirements.yml
notebooks/: 01_intro.ipynb  02a_data_generation_intro.ipynb  02b_feature_distributions_effect_size.ipynb  03a_irrelevant_features.ipynb  03a_irrelevant_features_backup.ipynb  03a_irrelevant_features_noise.ipynb  03b_correlated_features.ipynb  03b_noise_distributions.ipynb  03b_random_effects.ipynb  03c_correlated_features.ipynb  03c_pseudo_classes.ipynb  03d_non_causal_variation.ipynb  03d_random_effects.ipynb  04a_non_causal_variation_understanding.ipynb  04b_non_causal_variation_generating.ipynb  04c_use_cases_applications.ipynb  1.1-synthetic_biomedical_data.ipynb  1.2-synthetic_biomedical_data.ipynb  1.5-synthetic_biomedical_data.ipynb  _utils.py  nb_imports.py  test_utils.py  utils.py
notebooks/oer_utils/: __init__.py  batch_effects.py  config.py  evaluation.py  feature_selection.py  metrics.py  reporting.py  visualization.py
notebooks/oer_utils_tests/: test_evaluation.py  test_feature_selection.py
styles/: nb_style.mplstyle
