[tool.poetry]
name = "synthetic-biomedical-data-course"
version = "0.1.0"
description = "OER learning module built around Jupyter notebooks for synthetic biomedical data."
authors = ["Philip May <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "sbdc", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core scientific stack
numpy = "^2.0.0"
scipy = "^1.13.0"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"

# Synthetic data generator (your package)
synthetic-data-generator = "^0.1.0"

# Plotting & widgets
matplotlib = "^3.8.0"
plotly = "^5.22.0"
ipywidgets = "^8.1.0"

# Jupyter tooling (notebook-first)
jupyterlab = "^4.2.0"
notebook = "^7.2.0"
ipykernel = "^6.29.0"
nbformat = "^5.10.0"
nbconvert = "^7.16.0"
jupyterlab-git = "^0.50.0"
jupytext = "^1.16.0"

# CLI & config (optional utilities)
typer = { version = "^0.12.0", extras = ["all"] }
rich = "^13.7.0"
pydantic = "^2.7.0"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
black = "^24.8.0"
isort = "^5.13.0"
mypy = "^1.10.0"
nbqa = "^1.8.0"
pre-commit = "^3.7.0"
pytest-xdist = "^3.6.0"
types-pyyaml = "^6.0.12"
types-requests = "^2.32.0.20240914"

[tool.poetry.scripts]
sbdc = "sbdc.cli:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# ---------- Lint/format ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","N","A","C4","TID","SIM"]
ignore = ["E203"]
preview = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src","tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --strict-config --cov=sbdc --cov-report=term-missing"
testpaths = ["tests"]

[tool.nbqa.config]
black = { addopts = ["--line-length=100"] }
ruff = { addopts = ["--fix"] }