[tool.poetry]
name = "synthetic-biomedical-data-course"
version = "0.1.0"
description = "OER learning module built around Jupyter notebooks for synthetic biomedical data."
authors = ["Sigrun May <s.may@ostfalia.de>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "oer_utils", from = "notebooks" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core scientific stack
numpy = "*"
scipy = "*"
pandas = "*"
scikit-learn = "*"
statsmodels = "*"

# Synthetic data generator (development checkout)
biomedical-data-generator = { path = "../biomedical-data-generator", develop = true }
# biomedical-data-generator = "*"

# Plotting & widgets used in notebooks and nb_setup.py
matplotlib = "*"
seaborn = "*"
plotly = "*"
ipywidgets = "*"
notebook = "^7.5.0"

[tool.poetry.group.jupyter.dependencies]
# Optional: register this environment as a Jupyter kernel
ipykernel = "*"

[tool.poetry.group.lint.dependencies]
# Linting / formatting / typing
ruff = "^0.6.0"
black = { extras = ["jupyter"], version = "^24.8.0" }
isort = "^5.13.0"
mypy = "^1.10.0"
mdformat = "^0.7.18"
nbqa = "^1.8.0"
pre-commit = "^3.7.0"

# Type stubs for better mypy coverage
pandas-stubs = "*"
types-PyYAML = "*"
types-seaborn = "*"
types-requests = "^2.32.0.20240914"

[tool.poetry.group.dev.dependencies]
# Testing and packaging
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.0"
twine = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# ---------- Lint / format configuration ----------

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "C4", "TID", "SIM"]
ignore = ["E203"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["notebooks"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["notebooks"]
addopts = "-q --strict-markers --strict-config --cov=oer_utils --cov-report=term-missing"
testpaths = ["notebooks/oer_utils_tests"]

[tool.nbqa.config]
black = { addopts = ["--line-length=100"] }
ruff = { addopts = ["--fix"] }

[tool.coverage.run]
source = ["notebooks/oer_utils"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
